@@ -1,5 +1,8 @@
 2003-04-18  Jacob Smullyan  <smulloni@smullyan.org>
 
+	* SkunkWeb/Services/usertracking.py (_add_usertracking_cookie):
+	fix for cookie expiration.
+
 	* SkunkWeb/SkunkWeb/Server.py (_setConfigDefaults): setting default
 	value for runInForeground here, not in bootloader.py.
 
